# pt_appsec_ml_hook

./: .env.example  .pre-commit-hooks.yaml  Makefile  pyproject.toml
hooks/: auth_manager.py  hook.py
