[project]
name = "pt-appsec-ml-hook"
version = "0.0.11"
description = "Run OWASP validations using specialized LLM models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Configuración para hatchling (compatible con uv)
[tool.hatch.build.targets.wheel]
packages = ["hooks"]
