[project]
name = "pt-appsec-ml-hook"
version = "0.0.14"
description = "Run OWASP validations using specialized LLM models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "uvicorn>=0.37.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Configuración para hatchling (compatible con uv)
[tool.hatch.build.targets.wheel]
packages = ["hooks"]
